--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,4 @@
 before_install:
   - sdk install java 17.0.1-open
   - sdk use java 17.0.1-open
+  - echo "org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64" > gradle.properties
